# homepage

./: .buildinfo  README.md  async_git_stash_workflow.html  bash_noglob_for_alias.html  bash_quick_select_prompter.html  blog.html  dsl_function_objects.html  genindex.html  index.html  lakos_rule_visualized.html  meson.build  objects.inv  requirements.txt  search.html  searchindex.js  update_website_branch.sh
.doctrees/: async_git_stash_workflow.doctree  bash_noglob_for_alias.doctree  bash_quick_select_prompter.doctree  dsl_function_objects.doctree  environment.pickle  index.doctree  lakos_rule_visualized.doctree
_sources/: async_git_stash_workflow.rst.txt  bash_noglob_for_alias.rst.txt  bash_quick_select_prompter.rst.txt  index.rst.txt  lakos_rule_visualized.rst.txt
blog/: 2024.html  archive.html  author.html  drafts.html  tag.html
blog/author/: miro-palmu.html
blog/tag/: bash.html  blog.html  c.html  c20.html  consteval.html  constexpr.html  desing.html  dsl.html  git-stash.html  git.html  metaprogramming.html  noexcept.html  noglob.html  pipe.html  principle.html  scripting.html  shell.html  tools.html  utility.html  workflow.html
docs/: async_git_stash_workflow.rst  conf.py.in  dsl_function_objects.rst  index.rst  meson.build
docs/lakos_rule_visualized_assets/: diagrams.odg
